Add benchmarks for position update using OOP, DOD, and ECS approaches
- Implemented OOP, DOD, and ECS architectures for entity position updates.
- Created README.md to document benchmark implementations and expected results.
- Developed DOD implementation using Structure of Arrays for cache efficiency.
- Integrated SubzeroECS framework for ECS implementation with flexible component composition.
- Established main.cpp to run benchmarks and compare performance across implementations.
- Added fragmented update benchmarks to evaluate performance with mixed entity types and cache-unfriendly patterns.
- Included detailed setup for CMake to build benchmarks with appropriate optimizations.

--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -6,4 +6,5 @@ project(SubzeroECSBenchmarks CXX)
 find_package(Benchmark REQUIRED)
 
 # Add benchmark subdirectories
-add_subdirectory(position_update)
+add_subdirectory(coherent_update)
+add_subdirectory(fragmented_update)
