Consolidate Update Patterns Benchmark
- Removed the fragmented update OOP implementation and integrated it into a unified benchmark structure.
- Created a new CMakeLists.txt for the update patterns benchmark, linking against SubzeroECS and Google Benchmark.
- Added a comprehensive README.md detailing the benchmark's purpose, patterns, entity sizes, operations, and expected results.
- Implemented shared utilities and physics logic in common.hpp for consistent behavior across benchmarks.
- Developed DOD coherent and fragmented implementations, focusing on memory layout and cache efficiency.
- Established ECS coherent and fragmented implementations using SubzeroECS, demonstrating mixed entity compositions.
- Created main.cpp to register and run benchmarks for various patterns and sizes, ensuring easy comparison.
- Enhanced OOP implementation to include coherent and fragmented patterns with appropriate entity management.

--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -6,5 +6,4 @@ project(SubzeroECSBenchmarks CXX)
 find_package(Benchmark REQUIRED)
 
 # Add benchmark subdirectories
-add_subdirectory(coherent_update)
-add_subdirectory(fragmented_update)
+add_subdirectory(update_patterns)
