Update SFML version to 3.0.2 in CMakeLists.txt and README.md for improved compatibility

--- a/samples/balls_simulation/CMakeLists.txt
+++ b/samples/balls_simulation/CMakeLists.txt
@@ -6,7 +6,7 @@ project(BallsSimulation CXX)
 
 CPMAddPackage(
   NAME SFML
-  GIT_TAG 2.6.x
+  GIT_TAG 3.0.2
   GITHUB_REPOSITORY SFML/SFML
   OPTIONS
     "SFML_BUILD_AUDIO OFF"
